# mi_proyecto

./: README.dm  pyproject.toml  setup.py
mi_proyecto/: __init__.py  binario.py  burla.py  romanos.py
mi_proyecto.egg-info/: PKG-INFO  SOURCES.txt
scripts/: instalar.py  main.py
tests/: test_binario.py  test_burla.py  test_romanos.py
