[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "conversor_binario"
version = "0.1.0"
authors = [{name = "Rubén Rodríguez Tártalo"}]
description = "Conversor de números decimales a binarios"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = []